# bit-therapy

./: .gitiattributes  .gitignore  .swiftformat  .swiftlint.yml  LICENSE.md  Mobile-Pets-Info.plist  README.md  config.json
.github/: FUNDING.yml
AppState/: Package.swift
Aseprite/: bg.aseprite  sonic-robo-blast-2-v22.ase
Aseprite/ape/: ape_front-.aseprite  faces.aseprite
Aseprite/backgrounds/: ikea.aseprite  mountains.aseprite  mountains_land.aseprite  mountains_night.aseprite  mountains_night_land.aseprite
Aseprite/bunnyf/: bunnyf_eat.aseprite  bunnyf_fall.aseprite  bunnyf_front.aseprite  bunnyf_sleep.aseprite  bunnyf_walk.aseprite
Aseprite/bunnym/: bunnym_eat.aseprite  bunnym_fall.aseprite  bunnym_front.aseprite  bunnym_sleep.aseprite  bunnym_walk.aseprite
Aseprite/car/: Sprite-0001.aseprite  Sprite-0003.aseprite
Aseprite/cat/: cat_grumpy_angry_full-.aseprite
Aseprite/cat_blue_and_trex/: cat_blue_and_trex_eye_removal.aseprite
Aseprite/cat_house/: cat_house_front-.aseprite  prototype.aseprite
Aseprite/cayman718/: cayman718_semaphore.aseprite  cayman718_walk.aseprite
Aseprite/cybership/: cybership_busy_aliens.aseprite  cybership_front.aseprite  cybership_walk.aseprite
Aseprite/cybertruck/: cybertruck_charging.aseprite  cybertruck_front.aseprite  cybertruck_lateral.aseprite  cybertruck_semaphore.aseprite  cybertruck_showcase.aseprite  cybertruck_walk.aseprite  cybertruck_window_shatters.aseprite
Aseprite/dally/: dally.aseprite  dally_fly.aseprite  dally_front-.aseprite  dally_hiding-.aseprite
Aseprite/elon/: elon_front.aseprite
Aseprite/fantozzi/: fantozzi_front.aseprite
Aseprite/fireworks/: firework1.aseprite  firework2.aseprite
Biosphere/: Package.swift  README.md
DesignSystem/: Package.swift
DesktopPets.xcodeproj/: project.pbxproj
DesktopPets.xcworkspace/: contents.xcworkspacedata
EntityWindow/: Package.swift  README.md
HabitatWindows/: Package.swift  README.md
InAppPurchases/: Package.swift
Lang/: Package.swift
MacPets.xcodeproj/: project.pbxproj
OnScreen/: Package.swift
PetEntity/: Package.swift  README.md
PetSelection/: Package.swift
PetTherapy.xcworkspace/: contents.xcworkspacedata
Pets/: Package.swift  README.md
Physics/: Package.swift  README.md
Resources/: Info-Dev.plist  InfoMac-Dev.plist  contributors.json
Schwifty/: Package.swift  README.md
Scripts/: .gitignore  aseprite_export.py  lang.py  macos_screnshots_resize.py  renamer.py  sprites_checker.py  spritesgen.py  spritesheets.py
Sources/: App.swift  Secrets.plist
Sources/cpp/: CMakeLists.txt  README.md
Sources/cpp/scripts/: build.sh  clean.sh  dev.sh  run.sh  test.sh
Sources/cpp/src/: app_window.cpp  app_window.h  application_window.cpp  application_window.h  config_tests.h  entity.cpp  entity.h  file_utils.cpp  file_utils.h  game.cpp  game.h  game_renderer.h  game_renderer_impl.cpp  game_renderer_impl.h  game_tests.cpp  game_window.cpp  game_window.h  geometry.cpp  geometry.h  geometry_tests.cpp  linear_movement.cpp  linear_movement.h  linear_movement_tests.cpp  main.cpp  species.cpp  species.h  species_parser.cpp  species_parser.h  species_parser_impl.cpp  species_parser_impl.h  species_parser_impl_tests.cpp  species_parser_tests.cpp  species_repository.cpp  species_repository.h  species_repository_tests.cpp  sprite.cpp  sprite.h  sprite_set.cpp  sprite_set.h  sprite_set_builder.cpp  (+20 more)
Sources/cpp/src/capabilities/: capabilities.h  gravity.cpp  gravity.h  gravity_tests.cpp  linear_movement.cpp  linear_movement.h  linear_movement_tests.cpp
Sources/cpp/src/game/: entity.cpp  entity.h  game.cpp  game.h  game_tests.cpp  geometry.cpp  geometry.h
Sources/cpp/src/pets/: pets_builder.cpp  pets_builder.h
Sources/cpp/src/rendering/: game_loop.cpp  game_loop.h  game_window.cpp  game_window.h  rendering.h  screens.cpp  screens.h  screens_tests.cpp
Sources/cpp/src/species/: species_model.cpp  species_model.h  species_parser.cpp  species_parser.h  species_parser_tests.cpp  species_repository.cpp  species_repository.h  species_repository_tests.cpp
Sources/cpp/src/sprites/: asdf.cpp  asdf.h  sprite.h  sprite_set.cpp  sprite_set.h  sprite_set_builder.cpp  sprite_set_builder_tests.cpp  sprite_set_tests.cpp  sprites.h  sprites_repository.cpp  sprites_repository.h  sprites_repository_tests.cpp  timed_content_provider.h  timed_content_provider_tests.cpp
Sources/cpp/src/utils/: file_utils.cpp  string_utils.cpp  string_utils.h  string_utils_tests.cpp  utils.h  vector_utils.cpp  vector_utils_tests.cpp
Sources/rust/: Cargo.toml  README.md  notes.md
Sources/rust/src/: entity.rs  entity_builder.rs  file_utils.rs  game.rs  geometry.rs  main.rs  sprite.rs  sprite_set.rs  sprite_set_builder.rs  sprites_provider.rs  timed_content_provider.rs
Species/: ape.json  betta.json  bunnyf.json  bunnym.json  cat.json  cat_black.json  cat_blue.json  cat_calico.json  cat_cyan.json  cat_floppa.json  cat_gray.json  cat_green.json  cat_grumpy.json  cat_house.json  cat_indigo.json  cat_pinky.json  cat_purple.json  cat_strawberry.json  cat_white.json  cat_yellow.json  cayman718.json  cromulon.json  cromulon_pink.json  crow.json  crow_white.json  cybertruck.json  frog.json  frog_venom.json  gazebo.json  german.json  hedgehog.json  jeansbear.json  keqing.json  klee.json  koala.json  koala_pirate.json  labrador.json  lattehouse.json  milo.json  minecraft_bed.json  (+34 more)
Squanch/: Package.swift  README.md  banner
Tests/: Desktop Pets.xctestplan  DesktopPets.xctestplan  DesktopPetsTests.swift  Desktop_Pets_Tests.swift  MacPets.xctestplan  MacPetsTests.swift  MobilePets.xctestplan
Tracking/: Package.swift  README.md
UfoAbduction/: Package.swift  README.md
contributors/: contributors.json
docs/: custompets.md
(+1721 files in other folders)
