[package]
name = "pets"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_glium = "0.26.3"
env_logger = "0.11.3"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24.9", features = ["jpeg", "png"] }
tokio = "1.38.0"
regex = "1.10.5"
